Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
/** ID lister. */
public class Parser implements ParserConstants {

  static final public ASTNode Start() throws ParseException {ASTNode t;
    t = Sequence();
    jj_consume_token(ENDBLOCK);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Sequence() throws ParseException {ASTNode t, t1;
    t = Assign();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMICOLON:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMICOLON);
      t1 = Assign();
t = new ASTSenquence(t,t1);
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Assign() throws ParseException {ASTNode t,t1;
    t = BoolA();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      jj_consume_token(ASSIGN);
      t1 = BoolA();
t= new ASTAssign(t,t1);
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode BoolA() throws ParseException {ASTNode t,t1;
    t = BoolM();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(OR);
      t1 = BoolM();
t= new ASTOr(t,t1);
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode BoolM() throws ParseException {ASTNode t,t1;
    t = Relops();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      jj_consume_token(AND);
      t1 = Relops();
t= new ASTAnd(t,t1);
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Relops() throws ParseException {Token op;
  ASTNode t,t1;
    t = Exp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMP:
    case GREATER:
    case GREATEREQUALS:
    case LESS:
    case LESSEQUALS:
    case NOTEQUALS:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMP:{
        op = jj_consume_token(COMP);
        break;
        }
      case GREATER:{
        op = jj_consume_token(GREATER);
        break;
        }
      case GREATEREQUALS:{
        op = jj_consume_token(GREATEREQUALS);
        break;
        }
      case LESS:{
        op = jj_consume_token(LESS);
        break;
        }
      case LESSEQUALS:{
        op = jj_consume_token(LESSEQUALS);
        break;
        }
      case NOTEQUALS:{
        op = jj_consume_token(NOTEQUALS);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t1 = Exp();
switch (op.kind) {
          case COMP:
            t = new ASTEquals(t,t1,true);
            break;
          case GREATER:
            t = new ASTGreater(t,t1 ,false,true);
            break;
          case GREATEREQUALS:
            t = new ASTGreater(t,t1 ,true,true);
            break;
          case LESS:
            t = new ASTGreater(t,t1 ,false,false);
            break;
          case LESSEQUALS:
            t = new ASTGreater(t,t1 ,true,false);
            break;
          case NOTEQUALS:
          t = new ASTEquals(t,t1,false);
            break;
          default:
            break;
        }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Exp() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
if (op.kind == PLUS)
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Term() throws ParseException {Token op;
  ASTNode t1, t2;
    t1 = Fact();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        op = jj_consume_token(TIMES);
        break;
        }
      case DIV:{
        op = jj_consume_token(DIV);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Fact();
if (op.kind == TIMES)
                            t1 = new ASTTimes(t1,t2);
                      else t1 = new ASTDiv(t1,t2);
    }
{if ("" != null) return t1;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Fact() throws ParseException {Token n;
  ASTNode t,t1,t2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Num:{
      n = jj_consume_token(Num);
t = new ASTNum(Integer.parseInt(n.image));
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
t = new ASTBool(true) ;
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
t = new ASTBool(false) ;
      break;
      }
    case Id:{
      n = jj_consume_token(Id);
t = new ASTId(n.image);
      break;
      }
    case STRING:{
      n = jj_consume_token(STRING);
t = new ASTString(n.image);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      t = Exp();
t = new ASTNot(t);
      break;
      }
    case LPAR:{
      jj_consume_token(LPAR);
      t = BoolA();
      jj_consume_token(RPAR);
      break;
      }
    case MINUS:{
      n = jj_consume_token(MINUS);
t = Neg();
      break;
      }
    case LBREACE:{
      jj_consume_token(LBREACE);
t = Def() ;
      jj_consume_token(RBREACE);
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      t = BoolA();
t = new ASTNew(t);
      break;
      }
    case DEREF:{
      jj_consume_token(DEREF);
      t = Fact();
t = new ASTDeref(t);
      break;
      }
    case IF:{
      jj_consume_token(IF);
      t = If();
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      t = BoolA();
t = new ASTPrintln(t);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      t = BoolA();
      jj_consume_token(LBREACE);
      t1 = Def();
      jj_consume_token(RBREACE);
t = new ASTWhile(t,t1);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode If() throws ParseException {ASTNode t,t1,t2;
    t = BoolA();
    jj_consume_token(LBREACE);
    t1 = Sequence();
    jj_consume_token(RBREACE);
    jj_consume_token(LBREACE);
    t2 = Sequence();
    jj_consume_token(RBREACE);
{if ("" != null) return new ASTIf(t,t1,t2);}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Neg() throws ParseException {ASTNode t;
    t = Exp();
t = new ASTNeg(t);
    {if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Def() throws ParseException {Token id,op = null;
  ASTNode t1,t2;
java.util.List<Pair> l       =       new     java.util.LinkedList();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LET:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      jj_consume_token(LET);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUT:{
        op = jj_consume_token(MUT);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      id = jj_consume_token(Id);
      jj_consume_token(EQUALS);
      t1 = BoolA();
      jj_consume_token(SEMICOLON);
if(op!=null)
      t1 = new ASTNew(t1);
      op = null;
l.add(new Pair(id.image,t1));
    }
    t2 = Sequence();
{if ("" != null) return new ASTDef(l,t2);}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x20000000,0x40000000,0x0,0x0,0x80000000,0x80000000,0x300000,0x300000,0xc00000,0xc00000,0x52ccce0,0x10000,0x2000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x40,0x20,0x1f,0x1f,0x0,0x0,0x0,0x0,0x280,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[42];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 13; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 42; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
